== 0.2.2
* 2 minor tweaks
  * removed GC.start (libxml recommended this) as setting nodes to nil should be enough, specs run 3-4x faster (Brandon Keepers)
  * renamed get_tag_name to tag_name (Brandon Keepers)
  
== 0.2.1
* 1 minor fix, 3 major enhancements
  * fixed warnings about using XML::Parser (mojodna)
  * Improved namespace support, now handles multiple namespaces and allows namespaces to be set item wide or on a per element basis (mojodna)
  * Auto detect root nodes (mojodna)
  * Type coercion (mojodna)
  
== 0.2.0
* 1 major enhancement, 2 minor ehancements
  * Automatic handling of namespaces (part by Robert Lowrey and rest by John Nunemaker)
  * Added :root option to tag method. This allows setting an object as the root element, which sets xpath to use / and sets single to true
  * Now defaulting tag names for classes in modules to last constant downcased
  
== 0.1.7 2009-01-29
* 1 minor enhancement
  * Support dashes in elements (Josh Nichols)
  
== 0.1.6 2009-01-17
* 1 minor enhancement:
  * added support for nested collection elements (Justin Marney)

== 0.1.5 2009-01-05
* 1 major enhancement:
  * Updated to latest version of libxml-ruby (lightningdb)
  
== 0.1.4 2009-01-05
* 1 major enhancement:
  * Fixed parsing when the object is the root node. (Garret Alfert)

== 0.1.3 2008-12-31
* 1 major enhancement:
  * Added parsing of attributes of elements that are also mapped, see current_weather.rb for example (jeremyf)

== 0.1.2 2008-12-12
* 1 major enhancement:
  * Fixed that :deep only worked for first item (dvrensk)
  
== 0.1.0 2008-11-16

* 1 major enhancement:
  * Initial release