@@ -3,13 +3,13 @@ examples/current_weather.rb
 examples/dashed_elements.rb
 examples/post.rb
 examples/twitter.rb
+happymapper.gemspec
 History
 lib/happymapper/attribute.rb
 lib/happymapper/element.rb
 lib/happymapper/item.rb
 lib/happymapper/version.rb
 lib/happymapper.rb
-lib/libxml_ext/libxml_helper.rb
 License
 Manifest
 Rakefile
