@@ -1,3 +1,3 @@
 module HappyMapper
-  Version = '0.2.1'
+  Version = '0.2.2'
 end
